# ArenaPulse-AI

./: .coverage  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  HANDOVER.md  HANDOVER.md.bak  README.md  ai_studio_requirements.txt  app.py  error_logs.json  index.html  pyproject.toml  render.yaml  requirements.txt  ruff.toml  run.bat
.agents/rules/: 50-HACK2SKILL-competition-rules.md
.agents/workflows/: agentic-refactor.md  dead-code-cleanup.md  deploy-hf-production.md  deploy-streamlit-production.md  generate-product-docs.md  merge-conflict-resolution.md  publish-showcase.md  setup-git.md
.github/workflows/: deploy_hf.yml
app/: agent_engine.py  deterministic_rules.py  main.py
docs/: test_plan.md
docs/assets/: architecture_diagram
scratch/: council_advisors.md  council_advisors_v2.md  council_advisors_v3.md  council_peer_reviews.md  council_peer_reviews_v2.md  council_peer_reviews_v3.md  opus_cleanup_scan.md
src/: main.py
src/arenapulse/: __init__.py  decorators.py  engine.py  rules.py
src/arenapulse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/domain/: __init__.py  agent.py  deterministic_rules.py  models.py  narrative_client.py  physics.py  service.py  state.py
src/routers/: api.py
src/security/: secure_llm_client.py
static/: index.html
tests/: test_agent.py  test_api.py  test_api_integration.py  test_app.py  test_architecture.py  test_decorators.py  test_deterministic_rules.py  test_physics.py  test_secure_llm_client.py  test_service.py  test_stadium_crowd_engine.py  test_state.py
(+8 files in other folders)
