[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arenapulse"
version = "0.2.0"
description = "Zero-Hallucination Execution & State Guardrail Engine for AI Agents"
readme = "README.md"
authors = [{ name = "ArenaPulse Team" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "duckdb>=0.9.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]
